Adding page for grid
Former-commit-id: 28ebdff8ea9b1f4fc664c5d645412d40f3ad84a5

--- a/lib/jade/docs/theming/index.jade
+++ b/lib/jade/docs/theming/index.jade
@@ -2,7 +2,7 @@ extends ../index
 
 block doc-article
   :markdown
-    #### Theming
+    ## Theming
 
     Theming is design to be very straightforward in Kickstart as every component
     works like an extensible class.
