--- a/lib/jade/docs/ui/colors/index.jade
+++ b/lib/jade/docs/ui/colors/index.jade
@@ -2,9 +2,9 @@ extends ../../index
 
 block doc-article
   :markdown
-    #### Colors
+    ## Colors
 
-    ##### Grayscales
+    ### Grayscales
 
     Kickstart uses a 15 point grayscale
 
@@ -16,8 +16,7 @@ block doc-article
             code $#{color}
           td(class="color-#{color}")
 
-  :markdown
-    #### Rainbow
+  h3 Rainbow
 
   table
     tbody
