--- a/lib/jade/docs/index.jade
+++ b/lib/jade/docs/index.jade
@@ -1,7 +1,8 @@
 extends ../layout
 
 block mainpane
-  h1 Documentation
+  header.page-heading
+    h1 Documentation
 
   block doc-article
     h2 Quickstart
@@ -39,6 +40,8 @@ block sidebar
       a(href="/docs/") Quickstart
     li
       a(href="/docs/theming/") Theming
+    li
+      a(href="/docs/grid/") Grid
     li
       | UI
       ul
