Adding a tile. Meh.
Former-commit-id: b6af18e41b46ad4ac96bdc634242aec907c2718f

--- a/lib/sass/components/_tiles.sass
+++ b/lib/sass/components/_tiles.sass
@@ -16,6 +16,9 @@
     @if $color == transparent
       color: $black
 
+  h1
+    font-size: 1.15rem
+
   .ks-close
     text-decoration: none
     color: $gray
