adding docs page for functions
Former-commit-id: bcbd5f75c28007ba980ddb314b663f8f3c163600

--- a/lib/jade/docs/index.jade
+++ b/lib/jade/docs/index.jade
@@ -71,4 +71,9 @@ block sidebar
         li
           a(href="/docs/ui/typography") Typography
     li
+      | Functions
+      ul
+        li
+          a(href="/docs/functions/throttling") Throttling
+    li
       a(href="/docs/philosophy/") Philosophy
