--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block mainpane
   article.readable
-    h3 tl;dr
+    h1 Kickstart 3
     p Kickstart is a front-end framework designed for clean HTML on modern browsers.
 
 block sidebar
