--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -116,6 +116,8 @@ pre
 
 =page-heading
   +page-heading-default
+  h1, h2, h3, h4, h5, h6
+    // Styles should go here.
 
 =xxl-heading
   +xxl-heading-default
