naively implementing system.js until a cleaner solution comes along.
Former-commit-id: 9a97264bbc3b2618ebcb1c3a095b67a6171968a1

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -5,8 +5,16 @@ block mainpane
     h1 Kickstart 3
     p Kickstart is a front-end framework designed for clean HTML on modern browsers.
 
+    h2 Features
+    ul
+      li No jQuery dependency
+      li Runs ES6 JavaScript
+      li Flexbox grid
+      li Easily themeable
+      li Sass mixins for clean classes
+
 block sidebar
-  h3 Table of Contents
+  h1 Table of Contents
   ul
     li
       a(href="#") tl;dr
