--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -14,18 +14,16 @@ html(lang='en')
         aside.sidebar
           block sidebar
 
-    .modal(style="display: none")
+    .modal
       h1 I am a modal.
 
     footer
       // Temporary fix until I can get browserify working with system.js
       script(src="/js/system.min.js")
-      script(src="/js/systemjs/css.js")
 
       script(src="/js/kickstart.js")
 
       script.
-        System.import('modal.css!')
         System.import('modal').then(function(ks) {
           new ks.modal()
         }).catch(console.error.bind(console));
