starting to wonder what the point of systemjs is for this project.
Former-commit-id: 051d0bc5f20d9236111226c6f37b3a115dc5667d

--- a/lib/jade/docs/theming/index.jade
+++ b/lib/jade/docs/theming/index.jade
@@ -31,12 +31,12 @@ block doc-article
           padding: 20px
           margin-bottom: 15px
 
-    ##### Why do it this way?
+    ### Why do it this way?
 
     By decoupling the default styling from the final component name, you get the
     following benefits:
 
-    ###### Keep the Kickstart core library up-to-date
+    ### Keep the Kickstart core library up-to-date
 
     Updates to the core styles of Kickstart don't get overwritten when extending
     the component.
