--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -18,12 +18,5 @@ html(lang='en')
       h1 I am a modal.
 
     footer
-      // Temporary fix until I can get browserify working with system.js
-      script(src="/js/system.min.js")
-
       script(src="/js/kickstart.js")
-
-      script.
-        System.import('modal').then(function(ks) {
-          new ks.modal()
-        }).catch(console.error.bind(console));
+      script(src="/js/docs.js")
