--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -24,6 +24,9 @@
 .main-navigation
   +navbar
 
+.code
+  +pre
+
 // Colors
 // Kind of shitty, but there is a colors page that directly relies on this.
 
