--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -3,6 +3,7 @@ html(lang='en')
   head
     link(rel="stylesheet" href="/css/docs.css")
     link(rel="stylesheet" href="/css/kickstart.css")
+    link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/styles/tomorrow.min.css")
   body
     include _header
 
@@ -15,4 +16,15 @@ html(lang='en')
           block sidebar
 
     footer
+      script(src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js")
+      script.
+        hljs.configure({useBR: true});
+
+        var block, _i, _len,
+          blocks = document.querySelectorAll('.code');
+
+        for (_i = 0, _len = blocks.length; _i < _len; _i++) {
+          block = blocks[_i];
+          hljs.highlightBlock(block);
+        }
       script(src="/js/kickstart.js")
