finishing up icons
Former-commit-id: 5238f2cec5dfd65bf76a0eb99cd245e105ceb44a

--- a/lib/jade/docs/ui/icons/index.jade
+++ b/lib/jade/docs/ui/icons/index.jade
@@ -1,4 +1,9 @@
 extends ../../index
 
 block doc-article
-  h2 Icons
+  :markdown
+    ## Icons
+
+    In an effort not to reinvent the wheel and reduce Kickstart down to its bare essentials,
+    I recommend using [Font Awesome](http://fortawesome.github.io/Font-Awesome/) if your
+    project needs icons.
