Writing up docs for nav + button mixing
Former-commit-id: 2ed6d9a08bfb469a205de44ae53725d32a40b6b1

--- a/lib/jade/docs/ui/buttons/index.jade
+++ b/lib/jade/docs/ui/buttons/index.jade
@@ -4,4 +4,19 @@ block doc-article
   h2 Buttons
 
   .example
-    button Default button
+    button Sign up
+
+    :markdown
+      Example
+
+          <button class="button signup">Sign up</button>
+
+          .signup {
+            @include button();
+          }
+
+       Technically the `.button` class is not needed here. This is a utility
+       class only needed to restore styling when the button is nested in 
+       another Kickstrap block element.
+
+       See the [navbar](/docs/ui/navigation/) for an example.
