--- a/lib/jade/docs/ui/icons/index.jade
+++ b/lib/jade/docs/ui/icons/index.jade
@@ -5,5 +5,7 @@ block doc-article
     ## Icons
 
     In an effort not to reinvent the wheel and reduce Kickstart down to its bare essentials,
+    Icons are not part of the standard bundle for Kickstart.
+    
     I recommend using [Font Awesome](http://fortawesome.github.io/Font-Awesome/) if your
     project needs icons.
