navbar is a little better now but I still don't like the solution'
Former-commit-id: d99cb2c7b3502860e461307bbc932a1149c0d812

--- a/lib/jade/docs/ui/buttons/index.jade
+++ b/lib/jade/docs/ui/buttons/index.jade
@@ -9,14 +9,8 @@ block doc-article
     :markdown
       Example
 
-          <button class="button signup">Sign up</button>
+          <button class="signup">Sign up</button>
 
           .signup {
             @include button();
           }
-
-       Technically the `.button` class is not needed here. This is a utility
-       class only needed to restore styling when the button is nested in 
-       another Kickstrap block element.
-
-       See the [navbar](/docs/ui/navigation/) for an example.
