--- a/lib/jade/tests/navigation/index.jade
+++ b/lib/jade/tests/navigation/index.jade
@@ -19,3 +19,7 @@ block test
           li Foo
           li
             a(href="#") Foo
+          li
+            a.button(href="#") Foo
+          li
+            a.button(href="#") Foo
