--- a/lib/sass/core/_base.sass
+++ b/lib/sass/core/_base.sass
@@ -3,7 +3,7 @@
 @import ../../node_modules/normalize-sass/normalize
 @import url(http://fonts.googleapis.com/css?family=Lato:400,700,900,400italic)
 
-// Remapping of namespace
+// Remapping of namespace from 3rd-party libraries
 =container
   +grid-container
 
