--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -22,7 +22,7 @@
     +xxs-heading
 
 .main-navigation
-  +navbar
+  +navbar($bleed-container: true)
 
 // Colors
 // Kind of shitty, but there is a colors page that directly relies on this.
