--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -1,11 +1,9 @@
 =button-default($color)
-  padding: 10px 15px
+  +root-element
+  display: inline-block
   background-color: $darker-white
   color: inherit
-  border: 0px
-  outline: none
   cursor: pointer
-  +border-radius(3px)
 
   &:hover
     +box-shadow(0px -3px 0px 0px rgba(0, 0, 0, 0.1) inset)
