--- a/lib/sass/core/_components.sass
+++ b/lib/sass/core/_components.sass
@@ -7,6 +7,7 @@
 
 // Components
 @import core/_base
+@import components/_root-element
 @import components/_buttons
 @import components/_forms
 @import components/_nav
