Testing root element with input box
Former-commit-id: ca8ab356027d9cbba1c63057c0280974bed6874a

--- a/lib/jade/_header.jade
+++ b/lib/jade/_header.jade
@@ -10,3 +10,7 @@
           a(href="/docs/") Docs
         li
           a(href="/tests/") Tests
+
+      ul
+        li
+          input(type="search" placeholder="Search")
