--- a/lib/sass/components/_forms.sass
+++ b/lib/sass/components/_forms.sass
@@ -10,12 +10,14 @@ p, button, a
 
 input[type="text"],
 input[type="email"],
-input[type="number"]
+input[type="number"],
+input[type="search"]
+  +root-element
   margin-bottom: ($space/2)
-  padding: 5px
   border: 1px solid #CCC
   display: block
   +border-radius(3px)
+
   label + &
     margin-top: ($space/5)
 
