--- a/lib/jade/docs/ui/typography/index.jade
+++ b/lib/jade/docs/ui/typography/index.jade
@@ -2,6 +2,9 @@ extends ../../index
 
 block doc-article
   h2 Typography
+
+  include ../../../_partials/_iframe
+
   p By default, the standard set of typography tags will look like this:
 
   .example
@@ -30,7 +33,7 @@ block doc-article
     p.readable Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     p.readable Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-    pre 
+    pre
       code p.readable {
         |   @include p(true);
         | }
