Messing with iframe previews
Former-commit-id: 12a5424651ce0d806790a5a7ac1d8130059866dd

--- a/lib/jade/docs/ui/buttons/index.jade
+++ b/lib/jade/docs/ui/buttons/index.jade
@@ -1,16 +1,21 @@
 extends ../../index
 
+include ../../../_mixins
+
 block doc-article
   h2 Buttons
 
-  .example
-    button Sign up
+  +preview(
+    src='buttons',
+    rowOne='button()',
+    block=false
+  )
 
-    :markdown
-      Example
+  :markdown
+    Example
 
-          <button class="signup">Sign up</button>
+        <button class="signup">Sign up</button>
 
-          .signup {
-            @include button();
-          }
+        .signup {
+          @include button();
+        }
