--- a/lib/jade/docs/ui/typography/index.jade
+++ b/lib/jade/docs/ui/typography/index.jade
@@ -1,9 +1,15 @@
 extends ../../index
 
+include ../../../_mixins
+
 block doc-article
   h2 Typography
 
-  include ../../../_partials/_iframe
+  +preview(
+    src='typography',
+    rowOne='bar',
+    block=true
+  )
 
   p By default, the standard set of typography tags will look like this:
 
