--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -2,8 +2,9 @@
   +root-element
   display: inline-block
   background-color: $darker-white
-  color: inherit
+  color: $light-black
   cursor: pointer
+  text-decoration: none
 
   &:hover
     +box-shadow(0px -3px 0px 0px rgba(0, 0, 0, 0.1) inset)
