--- a/lib/sass/components/_tables.sass
+++ b/lib/sass/components/_tables.sass
@@ -6,6 +6,9 @@
   width: 100%
   margin-bottom: $space
 
+  pre
+    margin: 0
+
   thead
     background: $dark-white
     color: $black
@@ -21,7 +24,8 @@
     font-size: inherit
     margin: 0
     overflow: visible
-    padding: ($space/5) ($space/2)
+    padding: ($space/6) ($space/4)
+    line-height: normal
 
     &:first-child
       border-left-width: 0
