--- a/lib/sass/components/_typography.sass
+++ b/lib/sass/components/_typography.sass
@@ -26,7 +26,8 @@ p
   word-break: break-all
   word-wrap: break-word
   border: 0px !important
-  margin-bottom: $space
+  margin: 0
+    bottom: $space
 
 =code-default
   margin-bottom: 0px
