--- a/lib/jade/docs/index.jade
+++ b/lib/jade/docs/index.jade
@@ -63,6 +63,8 @@ block sidebar
         li
           a(href="/docs/ui/notifications") Notifications
         li
+          a(href="/docs/ui/tables") Tables
+        li
           a(href="/docs/ui/tabs") Tabs
         li
           a(href="/docs/ui/tiles") Tiles
@@ -75,5 +77,7 @@ block sidebar
       ul
         li
           a(href="/docs/functions/throttling") Throttling
+        li
+          a(href="/docs/functions/hdimages") HD Images
     li
       a(href="/docs/philosophy/") Philosophy
