--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -81,24 +81,43 @@ h1.example-
     +xxs-heading
 
 // For showing scaled down content in iframes
-.scaled-iframe-wrapper
+.scaled-iframe
+  clear: both
+  overflow: hidden
+  margin-bottom: 3.5rem
+
   $scale: 0.6
-  $width: 320px
+  $width: 280px
   $height: 250px
 
-  width: $width
-  height: $height
-  overflow: hidden
-  margin-bottom: $space
+  main
+    width: $width
+    height: $height
+    overflow: hidden
+    margin-bottom: $space
+    float: left
 
-  iframe.scaled
-    -ms-zoom: $scale
-    -moz-transform: scale(#{$scale})
-    -moz-transform-origin: 0 0
-    -o-transform: scale(#{$scale})
-    -o-transform-origin: 0 0
-    -webkit-transform: scale(#{$scale})
-    -webkit-transform-origin: 0 0
-    border: 1px solid $darkest-white
-    width: $width / $scale
-    height: $height / $scale
+    iframe
+      -ms-zoom: $scale
+      -moz-transform: scale(#{$scale})
+      -moz-transform-origin: 0 0
+      -o-transform: scale(#{$scale})
+      -o-transform-origin: 0 0
+      -webkit-transform: scale(#{$scale})
+      -webkit-transform-origin: 0 0
+      border: 1px solid $darkest-white
+      width: $width / $scale
+      height: $height / $scale
+
+  aside
+    float: left
+    width: calc(100% - #{$width})
+    height: $height
+
+    table
+      border-color: transparent
+      margin-left: 15px
+
+      th, td
+        border-color: transparent
+        font-size: 0.85rem
