Nailed the navbars
Former-commit-id: 3458d92efa8c0d4eb009a95e397b19b4b1fb0402

--- a/lib/jade/_header.jade
+++ b/lib/jade/_header.jade
@@ -13,4 +13,4 @@
 
       ul
         li
-          input(type="search" placeholder="Search")
+          // input(type="search" placeholder="Search")
