--- a/lib/jade/tests/buttons/index.jade
+++ b/lib/jade/tests/buttons/index.jade
@@ -5,6 +5,6 @@ block test
     h3 Buttons
 
     p
-      button.button Go
+      button.button(role="button") Go
       | &nbsp;
-      button.button Stop
+      button.button(role="button") Stop
