--- a/lib/jade/tests/navigation/index.jade
+++ b/lib/jade/tests/navigation/index.jade
@@ -33,7 +33,12 @@ block test
           li
             a.button(href="#" role="button") Button
           li
+            button.button(href="#" role="button") Button
+          li
             a.button(href="#" role="button") Button
+            | &nbsp;
+            a.button(href="#" role="button") Button
+
 
     h1 (Incorrect implementation)
     .navbar
