A little forms markup
Former-commit-id: e87adf0cbe9db2229de107615cb304e46262e3da

--- a/lib/jade/docs/ui/forms/index.jade
+++ b/lib/jade/docs/ui/forms/index.jade
@@ -2,3 +2,84 @@ extends ../../index
 
 block doc-article
   h2 Forms
+
+  h3 Default
+
+  form.form
+    label First Name
+    input(type="text" placeholder="John")
+
+    label Last Name
+    input(type="text" placeholder="Smith")
+
+    label Bio
+    textarea
+
+    label Industry
+    select
+      option Academic
+      option Automotive
+      option Finance
+      option Government
+      option Medical
+      option Restaurant
+      option Technology
+
+    input(type="submit" role="button")
+
+  h3 Horizontal
+
+  form.form-horizontal
+    label First Name
+    input(type="text" placeholder="John")
+
+    label Last Name
+    input(type="text" placeholder="Smith")
+
+    label Industry
+    select
+      option Academic
+      option Automotive
+      option Finance
+      option Government
+      option Medical
+      option Restaurant
+      option Technology
+
+    input(type="submit" role="button")
+
+  h3 Left
+
+  form.form-left
+    label First Name
+    input(type="text" placeholder="John")
+
+    label Last Name
+    input(type="text" placeholder="Smith")
+
+    label Bio
+    textarea
+
+    label Industry
+    select
+      option Academic
+      option Automotive
+      option Finance
+      option Government
+      option Medical
+      option Restaurant
+      option Technology
+
+    input(type="submit" role="button")
+
+  h3 Validation
+
+  form.form
+    label First Name
+    input(type="text" placeholder="John")
+
+    label First Name
+    input(type="text" placeholder="John")
+
+    label First Name
+    input(type="text" placeholder="John")
