--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -12,13 +12,16 @@
 
 // BUTTONS
 // -------
-.button, button
+.button, button, input[type=submit]
   +button
 
 // FORMS
 // -----
 .form-horizontal
   +form-horizontal
+
+.form-left
+  +form-left
 
 .form-group
   +form-group
