--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -73,6 +73,9 @@ $blue:           blue
 =form-horizontal()
   +form-horizontal-default()
 
+=form-left
+  +form-left-default()
+
 =form-group()
   +form-group-default()
 
