Restructuring docs for versioning.
Former-commit-id: 2e44163fb989c9b1572f7a170b38d07fe766d487

--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -1,6 +1,6 @@
 extends ../../index
 
-include ../../../_mixins
+include ../../../../_mixins
 
 block doc-article
   h2 Buttons
@@ -19,3 +19,18 @@ block doc-article
         .signup {
           @include button();
         }
+
+
+  h3 Variations
+
+  .button.red Red
+  | &nbsp;
+  .button.orange Orange
+  | &nbsp;
+  .button.yellow Yellow
+  | &nbsp;
+  .button.green Green
+  | &nbsp;
+  .button.blue Blue
+  | &nbsp;
+  .button.violet Violet
