--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -1,7 +1,7 @@
-=button-default($color)
+=button-default($color: $darker-white)
   +root-element
   display: inline-block
-  background-color: $darker-white
+  background-color: $color
   color: $light-black
   cursor: pointer
   text-decoration: none
