--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -56,8 +56,12 @@ $white:          #FFF
 
 // Rainbow
 
-$yellow:         yellow
-$blue:           blue
+$red:            #CA3518
+$orange:         darkorange
+$yellow:         gold
+$green:          #58AA00
+$blue:           cornflowerblue
+$violet:         darkmagenta
 
 @import ../core/index
 
