--- a/lib/jade/_header.jade
+++ b/lib/jade/_header.jade
@@ -7,7 +7,7 @@
         li
           a(href="/") Home
         li
-          a(href="/docs/") Docs
+          a(href="/docs/3.x/") Docs
         li
           a(href="/tests/") Tests
 
