--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -14,6 +14,24 @@
 // -------
 .button, button, input[type=submit]
   +button
+  // TODO: Make loop
+  &.red
+    +button($red)
+
+  &.orange
+    +button($orange)
+
+  &.yellow
+    +button($orange)
+
+  &.green
+    +button($green)
+
+  &.blue
+    +button($blue)
+
+  &.violet
+    +button($violet)
 
 // FORMS
 // -----
