--- a/lib/sass/components/_typography.sass
+++ b/lib/sass/components/_typography.sass
@@ -43,6 +43,16 @@ p
     line-height: 1.75rem
     margin-bottom: 2.5rem
 
+=hero-default
+  padding:
+    top: $space * 3
+    top: 10vw
+    bottom: $space * 3
+    bottom: 10vw
+  text-align: center
+  background: $primary-color
+  margin-bottom: $space
+
 =heading-break
   margin:
     top: 2rem
