--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -7,6 +7,8 @@ html(lang='en')
   body
     include _header
 
+    block bleed
+
     .container
       .row
         main.mainpane
@@ -14,6 +16,8 @@ html(lang='en')
 
         aside.sidebar
           block sidebar
+
+      block container
 
     footer
       script(src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js")
