--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -1,10 +1,11 @@
-=button-default($color: $darker-white)
+=button-default($color)
   +root-element
   display: inline-block
   background-color: $color
   color: $light-black
   cursor: pointer
   text-decoration: none
+  border-color: hsla(0, 0%, 0%, 0.1)
 
   &:hover
     +box-shadow(0px -3px 0px 0px rgba(0, 0, 0, 0.1) inset)
