Some hero sugar
Former-commit-id: f4ee265b87c09ee1cb175efb99b74eb61ea1852c

--- a/lib/sass/components/_typography.sass
+++ b/lib/sass/components/_typography.sass
@@ -52,6 +52,7 @@ p
   text-align: center
   background: $primary-color
   margin-bottom: $space
+  box-shadow: inset 0px -30px 100px -20px hsla(0, 0%, 0%, 0.15), inset 0px 40px 90px -20px rgba(255, 255, 255, 0.15)
 
 =heading-break
   margin:
