--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -6,6 +6,10 @@
   cursor: pointer
   text-decoration: none
   border-color: hsla(0, 0%, 0%, 0.1)
+  color: $light-black
+
+  @if (lightness($color) < 75%)
+    color: $white
 
   &:hover
     +box-shadow(0px -3px 0px 0px rgba(0, 0, 0, 0.1) inset)
