using more lato;
Former-commit-id: e3d9e218316e30c3116bcc2e51377a0898723bda

--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -128,6 +128,7 @@ $default-line-height: 1.4rem
   +hero-default
   h1, h2, h3, h4, h5, h6, p
     color: white
+    font-weight: 100
 
   h1
     +xxl-heading
