adding tests flow
Former-commit-id: e5f1ee6905725a541c5301968f79c710eec0f6f9

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -1,10 +1,12 @@
 extends layout
 
+block bleed
+  header.hero
+    h1 Kickstart 3
+    h5 A front-end framework for clean HTML<br>and fast performance.
+
 block mainpane
   article.readable
-    header
-      h1 Kickstart 3
-      p Kickstart is a front-end framework focused on clean HTML and fast performance.
 
     main
       h2 Lightweight
